# libdaio

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  libdaio.c  libdaio.h  libdaio_example.c
